--- a/src/Pages/Auth/Auth.css
+++ b/src/Pages/Auth/Auth.css
@@ -21,12 +21,12 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
 }
 
 .auth-container-2 form {
   width: 100%;
-  max-width: 35vw;
+  max-width: 30vw;
   padding: 20px;
   background-color: white;
   border-radius: 10px;
